--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>JS Assign</title>
-		<script type="text/javascript">alert("I am from <head>");</script>
+		<script type="text/javascript">alert("I am from <head>");</script> <!--checked alert in head secton -->
 	</head>
 	<body>
-		<script type="text/javascript">alert("I am from <body>");</script>
-		<script type="text/javascript" src="test.js"></script>
+		<script type="text/javascript">alert("I am from <body>");</script><!--checked alert in body secton -->
+		<script type="text/javascript" src="test.js"></script> <!--Linked external sheet for alert -->
 	</body>
 </html>
